# spirit-v1.5

./: README.md  pyproject.toml
model/: modeling_spirit_vla.py  utils.py
robochallenge/robot/: interface_client.py  job_worker.py
robochallenge/runner/: __init__.py  executor.py  task_info.py
robochallenge/utils/: util.py
scripts/: run_robochallenge.sh
